k8s/mimoza-user-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mimoza-user-service-lb
spec:
  selector:
    app: mimoza-user-service
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
