k8s/mimoza-user-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mimoza-user-service-nodeport
spec:
  selector:
    app: mimoza-user-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
