k8s/mimoza-user-service-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mimoza-user-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: mimoza.v1.info
    http:
      paths:
      - path: /nodeport
        backend:
          serviceName: mimoza-user-service-nodeport
          servicePort: 80
